Updated resume page with new styles

--- a/index.html
+++ b/index.html
@@ -32,25 +32,29 @@
     </section>
 
     <section id="skills">
-      <h2>Skills</h2>
-      <ol id="skills-list">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>TypeScript</li>
-        <li>React JS</li>
-        <li>Node JS</li>
-      </ol>
+      <div class="skills-container">
+        <h2><span>Skills</span></h2>
+        <ol id="skills-list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>TypeScript</li>
+          <li>React JS</li>
+          <li>Node JS</li>
+        </ol>
+      </div>
     </section>
 
     <section id="hobbies">
-      <h2>My Hobbies</h2>
-      <ul id="hobbies-list">
-        <li>Cross Stitching</li>
-        <li>Knitting</li>
-        <li>Shuffling Around</li>
-        <li>Spitting at the Ceiling</li>
-      </ul>
+      <div class="hobbies-container">
+        <h2><span>Hobbies</span></h2>
+        <ul id="hobbies-list">
+          <li>Cross Stitching</li>
+          <li>Knitting</li>
+          <li>Shuffling Around</li>
+          <li>Spitting at the Ceiling</li>
+        </ul>
+      </div>
     </section>
 
     <section id="contacts">
