--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jon Doe Resume</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>Jon Doe's resume</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+
+    <script src="./js/scripts.js" defer></script>
   </head>
-  <body id="fancy-body">
-    <header>
-      <h1 id="candidate-name">Jon Doe</h1>
-      <h2 id="candidate-desired-role">
-        <strong>Talented Frontend Developer</strong>
-      </h2>
-    </header>
+  <body id="fancy-body" class="fancy-body">
+    <h1 id="candidate-name">Jon Doe</h1>
+
+    <h2 id="candidate-desired-role">Talented Frontend developer</h2>
 
     <div>
       <img
@@ -22,76 +21,74 @@
       />
     </div>
 
-    <section id="about-me">
-      <h2><strong>About Me</strong></h2>
+    <div>
+      <h2 id="about-me">About me</h2>
       <p class="candidate-bio">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-        sapiente iure ex sed illum error. Saepe dolorum excepturi tenetur
-        tempore assumenda necessitatibus accusantium suscipit pariatur!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In adipisci
+        quaerat ducimus. Dolorum a eius aspernatur officia natus reprehenderit
+        repudiandae. Eum earum quae aut provident sequi et adipisci asperiores
+        voluptate veritatis? Temporibus nobis incidunt, reiciendis ipsa, sequi
+        explicabo harum vel molestias dolorem illum beatae quis ipsum sapiente,
+        iste dicta maiores.
       </p>
-    </section>
+    </div>
 
-    <section id="skills">
-      <div class="skills-container">
-        <h2><span>Skills</span></h2>
-        <ol id="skills-list">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>TypeScript</li>
-          <li>React JS</li>
-          <li>Node JS</li>
-        </ol>
-      </div>
-    </section>
+    <h2 id="skills">My Skills</h2>
+    <ol id="skills-list">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>TypeScript</li>
+      <li>React JS</li>
+      <li>Node JS</li>
+    </ol>
 
-    <section id="hobbies">
-      <div class="hobbies-container">
-        <h2><span>Hobbies</span></h2>
-        <ul id="hobbies-list">
-          <li>Cross Stitching</li>
-          <li>Knitting</li>
-          <li>Shuffling Around</li>
-          <li>Spitting at the Ceiling</li>
-        </ul>
-      </div>
-    </section>
+    <div class="hobbies-container">
+      <h2 id="hobbies">My Hobbies</h2>
+      <ul id="hobbies-list">
+        <li>Cross Stitching</li>
+        <li>Knitting</li>
+        <li>Shuffling Around</li>
+        <li>Spitting at the Ceiling</li>
+      </ul>
+    </div>
 
-    <section id="contacts">
-      <h2>Contact Me</h2>
-      <table class="contacts-table" border="0">
+    <div class="contacts-table">
+      <h2 id="contacts">Contact Me</h2>
+
+      <table class="contacts-table">
         <tr>
-          <td><b>Discord</b></td>
+          <th>Discord</th>
           <td>
-            <a href="https://discord.gg/YOUR_SERVER_CODE" target="_blank">
-              Join My Discord
-            </a>
+            <a target="_blank" href="https://discord.com/channels/@me"
+              >https://discord.com/channels/@me</a
+            >
           </td>
         </tr>
 
         <tr>
-          <td><b>LinkedIn</b></td>
+          <th>LinkedIn</th>
           <td>
-            <a href="https://www.linkedin.com/in/user" target="_blank">
-              LinkedIn Profile
-            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/jondoe"
+              >https://www.linkedin.com/in/jondoe</a
+            >
           </td>
         </tr>
         <tr>
-          <td><b>Email</b></td>
-          <td><a href="mailto:user@test.com">user@test.com</a></td>
-        </tr>
-        <tr>
-          <td><b>GitHub</b></td>
+          <th>Email</th>
           <td>
-            <a href="https://github.com/mhtd10801992" target="_blank">
-              GitHub Profile
-            </a>
+            <a href="mailto:joh@email">joh@email</a>
+          </td>
+        </tr>
+
+        <tr>
+          <th>GitHub</th>
+          <td>
+            <a href="https://github.com">https://github.com</a>
           </td>
         </tr>
       </table>
-    </section>
-
-    <script src="js/scripts.js"></script>
+    </div>
   </body>
 </html>
+
